WRAP_GGO(rtkfourdrooster_GGO_C rtkfourdrooster.ggo)
ADD_EXECUTABLE(rtkfourdrooster rtkfourdrooster.cxx ${rtkfourdrooster_GGO_C})
TARGET_LINK_LIBRARIES(rtkfourdrooster IGT)

IF (IGT_USE_CUDA)
  TARGET_LINK_LIBRARIES(rtkfourdrooster igtcuda)
ENDIF (IGT_USE_CUDA)

# Installation code
IF(NOT IGT_INSTALL_NO_EXECUTABLES)
  FOREACH(EXE_NAME rtkfourdrooster) 
    INSTALL(TARGETS ${EXE_NAME}
      RUNTIME DESTINATION ${IGT_INSTALL_RUNTIME_DIR} COMPONENT Runtime
      LIBRARY DESTINATION ${IGT_INSTALL_LIB_DIR} COMPONENT RuntimeLibraries
      ARCHIVE DESTINATION ${IGT_INSTALL_ARCHIVE_DIR} COMPONENT Development)
  ENDFOREACH(EXE_NAME) 
ENDIF(NOT IGT_INSTALL_NO_EXECUTABLES)

